# spotify-rec

./: .dockerignore  .gitignore  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
backend/app/: cache.py  create_tables.py  db.py  main.py  models.py  pgvector_utils.py  settings.py  spotify_client.py  tasks.py
backend/app/recommender/: data_prep.py  feature_engineering.py  file_backend.py  on_the_fly.py  playlist_vector.py  recommend.py
backend/app/scripts/: build_features.py  fetch_kaggle.py  prepare_parquet.py  run_api.sh  setup_data.sh  smoke_test.sh
backend/docker/: entrypoint.sh
backend/tests/: Dockerfile  conftest.py  docker-compose.yml  test_health.py  test_recommendations.py  test_spotify_client.py
backend/tests/app/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/api/recommend/: route.ts
frontend/src/app/api/recommend-multi/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/recommend/: RecommendClient.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: BackLink.tsx  SearchBox.tsx  SeedChips.tsx  Spinner.tsx  TrackCard.tsx
frontend/src/lib/: api.ts  ui.ts
frontend/src/state/: seeds.ts
frontend/src/types/: api.ts
